--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
 <body>
     <main>
         <section class="telefone">
-            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+            <iframe src="home.html" name="tela" id="tela" frameborder="0">
+                seu navegador não e compativel com iframe:(
+            </iframe>
         </section>
         <section class="redes-sociais">
-
+            <a href="home.html" target="tela"><img src="images/logo-home.jpg" alt="home"><br>
+            <a href="facebook.html" target="tela"><img src="images/logo-facebook.jpg" alt="facebook"><br>
+            <a href="github.html" target="tela"><img src="images/logo-github.jpg" alt="github"><br>
+            <a href="instagram.html" target="tela"><img src="images/logo-instagram.jpg" alt="instagram"><br>
+            <a href="twitter.html" target="tela"><img src="images/logo-twitter.jpg" alt="twitter">
         </section>
     </main>
 </body>
